# digital_geometry

./: .gitignore
helloworld/: CMakeLists.txt  helloworld.cpp
tp1/: CMakeLists.txt  main.cpp
tp2/: CMakeLists.txt  main.cpp
tp2/RiceGrains/: Rice_basmati_seg_bin.pgm  Rice_camargue_seg_bin.pgm  Rice_japonais_seg_bin.pgm
tp3/: CMakeLists.txt  Component.cpp  Component.hpp  Find2DAffineTransform.cpp  Find2DAffineTransform.hpp  README.md  main.cpp  main.hpp
tp3/TP3_images/binary/: Cle_00.pgm  Cle_01.pgm  Cle_02.pgm  Cle_03.pgm  Cutter_00.pgm  Cutter_01.pgm  Cutter_02.pgm  Pince_00.pgm  Pince_01.pgm  Pince_02.pgm  Pince_03.pgm  Pince_04.pgm
tp3/TP3_images/created/: cle1_transformed.pgm
tp3/TP3_images/original/: IMG_2740.pgm  IMG_2741.pgm  IMG_2742.pgm  IMG_2743.pgm  IMG_2753.pgm  IMG_2756.pgm  IMG_2757.pgm  IMG_2763.pgm  IMG_2764.pgm  IMG_2765.pgm  IMG_2766.pgm  IMG_2767.pgm
